Fix sur 2e cercle overflow

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,7 +3,8 @@ body {
     font-family: "Fredoka", serif;
     margin: 0;
     padding: 0;
-}
+    overflow-x: hidden;
+}s
 
 /****************************************** */
 /* UI-NOTE SECTION 1 */
